# MedCaseAgent

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: case.json
examples/41799793/: case.json
medcase_agent/: __init__.py  cli.py  config.py  data.py  llm.py  models.py  pipeline.py  prompts.py  skills.py  tools.py
skills/care_case_report/: SKILL.md
skills/citation_policy/: SKILL.md
skills/clinical_fidelity/: SKILL.md
skills/final_audit/: SKILL.md
skills/tool_use_policy/: SKILL.md  tools.py
skills/visual_reporting/: SKILL.md
